MDEV-13633 JSON_ARRAY() - bad output with some UTF8 characters.

set_charset() calls added for Item_func_json_arran
        and Item_func_json_object::val_str-s.