sql/item_jsonfunc.cc
@@ -1473,6 +1473,7 @@ String *Item_func_json_array::val_str(String *str)
   uint n_arg;
 
   str->length(0);
+  str->set_charset(collation.collation);
 
   if (str->append("[", 1) ||
       ((arg_count > 0) && append_json_value(str, args[0], &tmp_val)))
@@ -1797,6 +1798,7 @@ String *Item_func_json_object::val_str(String *str)
   uint n_arg;
 
   str->length(0);
+  str->set_charset(collation.collation);
 
   if (str->append("{", 1) ||
       (arg_count > 0 &&
